<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_selector"
        android:title="@string/home"
        android:iconTint="@color/nav_home_selector"
        />
    <item
        android:id="@+id/navigation_workout"
        android:icon="@drawable/ic_fitness_selector"
        android:iconTint="@color/nav_home_selector"

        android:title="@string/workouts" />
    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/ic_plan_selector"
        android:iconTint="@color/nav_home_selector"
        android:title="@string/my_plan" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_selector"
        android:iconTint="@color/nav_home_selector"
        android:title="@string/profile" />

</menu>